--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,6 +25,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="/registro">Registro</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="/inicio-sesion">Iniciar sesión</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="/main">Main</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="/private">Private area</a> </li>
+
+
       </ul>
     </div>
   </nav>
