--- a/views/pages/index.hbs
+++ b/views/pages/index.hbs
@@ -1,3 +1,10 @@
 <div class="container">
-    <h1>Welcome to {{siteTitle}}</h1>
+    <h1>Choose What To Do</h1>
+    <a href="/sign-up">Sign-Up</a>
+    <a href="/login">Log-In</a>
+    <a href="/main">Main</a>
+    <a href="/private">Private</a>
+
+    <a href="/logout">LogOut</a>
+
 </div>
