--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,6 +25,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="/login">Login</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="/close-session">Close session</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="/private">Private</a> </li>
       </ul>
     </div>
   </nav>
