--- a/views/pages/login.hbs
+++ b/views/pages/login.hbs
@@ -1,9 +1,8 @@
 <div class="container">
-    <h1>Welcome to {{siteTitle}}</h1>
-    <h2>Register page</h2>
+    <h1>Login page</h1>
 
 
-    <form action="/register" method="POST">
+    <form action="/login" method="POST">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
@@ -16,7 +15,8 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary">Log in</button>
+        
     </form>
 
 </div>
